--- a/app/views/questions/ask.html.erb
+++ b/app/views/questions/ask.html.erb
@@ -2,5 +2,5 @@
 <p>---------------------------------------------------</p>
 <form action="/answer" method="get">
   <input type="text" name="input">
-  <input type="submit" value="Ask!">
+  <button class="btn btn-outline-primary" type="submit">Ask!</button>
 </form>
