--- a/app/views/questions/ask.html.erb
+++ b/app/views/questions/ask.html.erb
@@ -1,6 +1,8 @@
-<h1 class="banner">Stupid Coach</h1>
-<p>---------------------------------------------------</p>
+<div class = "card">
+<h1 class="banner">Coach</h1>
+<br>
 <form action="/answer" method="get">
   <input type="text" name="input">
   <button class="btn btn-outline-primary" type="submit">Ask!</button>
 </form>
+</div>
